# advent-of-code-rs

./: .gitignore  Cargo.toml  build.rs  demo.ps1  enhanced_demo.ps1
aoc-auto/: Cargo.toml  README.md
aoc-auto/src/: lib.rs  template.rs
aoc-lib/: Cargo.toml  README.md
aoc-lib/src/: client.rs  lib.rs
src/: auto_import.rs  main.rs  template.rs  viz_demo.rs  viz_tests.rs
src/y2021/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs  template.rs
src/y2022/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
src/y2023/: d1.rs  mod.rs
src/y2024/: d1.rs  d1_visualized.rs  d1_viz.rs  mod.rs
viz-lib/: Cargo.toml  README.md
viz-lib/examples/: algorithm_examples.rs  pathfinding_algorithms.rs  proc_macro_examples.rs  sorting_algorithms.rs  tree_algorithms.rs
viz-lib/src/: context_tree_fix.rs  lib.rs  server.rs
viz-lib/src/examples/: algorithms.rs  basic.rs  enhanced.rs  mod.rs  pathfinding.rs  proc_macro.rs  trees.rs
viz-lib/web/: script.js
viz-proc-macro/: Cargo.toml
viz-proc-macro/src/: lib.rs
viz-web/: index.html  style.css
