[package]
name = "advent-of-code-rs"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Öberg"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
tui = "0.19.0"
crossterm = "0.27.0"
console = "0.15.7"

[build-dependencies]
quote = "1.0.33"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2.15"
