[workspace]
members = ["aoc-lib"]
[package]
name = "advent-of-code-rs"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Öberg"]
description = "Solutions to Advent of Code in Rust"
repository = "https://github.com/AlexanderReaper7/advent-of-code-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
console = "0.15.7"
time = "0.3.30"
aoc-lib = { path = "aoc-lib" }

[build-dependencies]
aoc-auto = { path = "../aoc-auto" , version = "*"}
