[package]
name = "aoc-lib"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Öberg", "panicbit <panicbit.dev@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
select = "0.6.1"
dirs = "6.0.0"
failure = "0.1.8"