[package]
name = "viz-lib"
version = "0.1.0"
edition = "2021"
description = "Visualization library for step-by-step code execution"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
warp = { version = "0.3", optional = true }
tower-serve-static = { version = "0.1", optional = true }

[features]
default = []
server = ["tokio", "warp", "tower-serve-static"]

[[bin]]
name = "viz-server"
path = "src/bin/viz-server.rs"
required-features = ["server"]

[[example]]
name = "sorting_algorithms"
path = "examples/sorting_algorithms.rs"

[[example]]
name = "tree_algorithms"
path = "examples/tree_algorithms.rs"

[[example]]
name = "pathfinding_algorithms"
path = "examples/pathfinding_algorithms.rs"

[[example]]
name = "algorithm_examples"
path = "examples/algorithm_examples.rs"

[[example]]
name = "proc_macro_examples"
path = "examples/proc_macro_examples.rs"
